# audiobook-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.env.example  install.sh  pyproject.toml  requirements.txt
.claude/agents/: audiobook-guide.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.reports/: antagonistic-review.md  briefing.md  library-analysis.md  organize-dryrun-test.md  reorganize-audit.md  reorganize-dryrun-test.md  reorganize-pipeline.md  session-history.md
docs/: install.md
lib/: archive.sh  asin.sh  audible.sh  audnexus.sh  concurrency.sh  core.sh  error-recovery.sh  ffmpeg.sh  manifest.sh  metadata.sh  organize.sh  sanitize.sh
logrotate.d/: README.md  audiobook-pipeline
scripts/: find_untagged.py  gen-readme.py  gen-requirements.py
stages/: 01-validate.sh  02-concat.sh  03-convert.sh  04-cleanup.sh  05-asin.sh  06-metadata.sh  07-organize.sh  08-archive.sh  09-cleanup.sh
tests/: __init__.py  test_ai.py  test_audit.py  test_cli.py  test_concurrency.py  test_config.py  test_convert_orchestrator.py  test_errors.py  test_ffprobe.py  test_library_diff.py  test_library_index.py  test_logging.py  test_manifest.py  test_models.py  test_pipeline_db.py  test_sanitize.py
(+106 files in other folders)
