[project]
name = "audiobook-pipeline"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "loguru>=0.7",
    "openai>=1.0",
    "rapidfuzz>=3.0",
    "pydantic-settings[toml]>=2.0",
    "psutil>=7.2.2",
]

[project.scripts]
audiobook-convert = "audiobook_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiobook_pipeline"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "pre-commit>=3.0"]
